Added Social media Icon on discount calculator
Added Social media Icon on discount calculator

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Discount Calculator</title>
         <!-- External CSS Link -->
         <link rel="stylesheet" href="style.css">
+        <!-- CDN Link -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Google Font Family Font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,13 +16,21 @@
             <h2>Discount Calculator</h2>
             <p>Enter the bill amount and discount in percentage</p>
             <form>
-                <label id="labelBill"></label>Bill Amount</label>
+                <label id="labelBill">Bill Amount</label>
                 <input type="number"><br>
                 <label>Discount Percentage</label>
                 <input type="number"><br>
                 <button>Calculate</button>
             </form>
             <p id="total">Total Discount Amount ==</p>
+            <div class="logos">
+                <a href="https://twitter.com" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                <a href="https://www.youtube.com/" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+            </div>
+           
         </div>
     </body>
 </html>
